# Python-for-AI

./: dict.py  first_class.py  import_packages.py  list.py
Classes/: second_class.py  third_class.py
Environment/: .env  test.py
learning_package/: main.py  pyproject.toml  requirements.txt
